--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "demo:zap": "bash demo-zap-integration.sh",
+    "demo:zap:windows": "powershell -ExecutionPolicy Bypass -File demo-zap-integration.ps1"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.7",
